--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -82,9 +82,9 @@
                                 </ToolTip>
                             </Border.ToolTip>
                         </Border>
-                        <Grid x:Name="NotifIcon" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5" Opacity="0.25">
-                            <Image Source="{StaticResource bellIcon}" MaxWidth="15" MaxHeight="15"/>
-                            <Line x:Name="notifLine" X2="12" Y2="12" Stroke="{StaticResource Icons}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0"/>
+                        <Grid x:Name="NotifGrid" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5">
+                            <Image x:Name="NotifIcon" Source="{StaticResource bellIcon}" MaxWidth="15" MaxHeight="15" Opacity="0.25"/>
+                            <Line x:Name="notifLine" X2="12" Y2="12" Stroke="{StaticResource PastDue}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0"/>
                         </Grid>
                     </Grid>
 
