--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -36,9 +36,17 @@
 
             <StackPanel HorizontalAlignment="Center" Margin="20 110 20 20">
 
-                <userControl:IconButton SVGSource="{StaticResource homeIcon}" x:Name="HomeButton" Width="40" Height="40" Cursor="Hand" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" MouseDown="CategoryButton_MouseDown"/>
+                <StackPanel DockPanel.Dock="Top">
+                    <Grid>
+                        <Border x:Name="HomeButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand"/>
+                        <Image x:Name="HomeIcon" Source="{StaticResource homeIcon}" MaxWidth="20" MaxHeight="20" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
+                    </Grid>
+                    <Grid Margin="0 5 0 0">
+                        <Border x:Name="CompletedButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand"/>
+                        <Image x:Name="CompletedIcon" Source="{StaticResource completedIcon}" MaxWidth="18" MaxHeight="18" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
+                    </Grid>
 
-                <userControl:IconButton SVGSource="{StaticResource completedIcon}" x:Name="CompletedButton" Width="40" Height="40" Cursor="Hand" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" MouseDown="CategoryButton_MouseDown"/>
+                <StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
 
                 <!--<Border x:Name="HomeButton" Height="30" CornerRadius="10" Cursor="Hand" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" MouseDown="CategoryButton_MouseDown">
 
