--- a/UserControls/IndividualTask.xaml
+++ b/UserControls/IndividualTask.xaml
@@ -18,7 +18,17 @@
 
         <Border x:Name="StrokeBorder" Grid.Row="1" CornerRadius="5" BorderBrush="{StaticResource Blue}" BorderThickness="0" Width="{Binding ActualWidth, ElementName=Background, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=Background, Mode=OneWay}" />
 
-        <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" MouseEnter="Background_MouseEnter" MouseLeave="Background_MouseLeave" MouseDown="Background_MouseDown" />
+        <Border x:Name="Background" Background="{StaticResource DarkBlue}" Opacity="0" Grid.Row="1" CornerRadius="5" MinHeight="40" MouseEnter="Background_MouseEnter" MouseLeave="Background_MouseLeave" MouseDown="Background_MouseDown" MouseMove="Background_MouseMove" ToolTipService.IsEnabled="False">
+            <Border.ToolTip>
+                <ToolTip>
+                    <ToolTip.Content>
+                        <Border Background="{StaticResource Secondary}" CornerRadius="4" Padding="5">
+                            <Label x:Name="TaskToolTipLabel" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="11" HorizontalAlignment="Left" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="5 0"/>
+                        </Border>
+                    </ToolTip.Content>
+                </ToolTip>
+            </Border.ToolTip>
+        </Border>
 
         <Line VerticalAlignment="Bottom" Stroke="{StaticResource Accent}" StrokeThickness="2" X2="{Binding ActualWidth, ElementName=Background}" Grid.Row="2" Opacity="0.25" IsHitTestVisible="False"/>
 
@@ -181,11 +191,8 @@
                 </Border>
 
                 <Grid Grid.Column="1">
-
                     <TextBlock x:Name="taskNameTextBlock" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Padding="0,0,0,0" IsHitTestVisible="False" TextTrimming="CharacterEllipsis" MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type Grid}}}"/>
-
                     <StackPanel x:Name="TextSP" Orientation="Horizontal" VerticalAlignment="Center"/>
-
                     <Rectangle x:Name="strikethroughLine" Stroke="{StaticResource DarkBlue}" VerticalAlignment="Bottom" Margin="0 0 0 13" IsHitTestVisible="False" Height="2" MaxWidth="{Binding ActualWidth, ElementName=taskNameTextBlock}" HorizontalAlignment="Left" />
                 </Grid>
             </Grid>
