--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -93,6 +93,10 @@
                         <Grid x:Name="NotifGrid" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5">
                             <Image x:Name="NotifIcon" Source="{StaticResource bellIcon}" MaxWidth="15" MaxHeight="15" Opacity="0.25"/>
                             <Line x:Name="notifLine" X2="12" Y2="12" Stroke="{StaticResource PastDue}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="1 2 0 0" Opacity="0"/>
+                            <Grid x:Name="notifLineHP" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10 3 0 0" Opacity="0">
+                                <Line Y2="8" Stroke="{StaticResource HighPriority}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2"/>
+                                <Line Y1 ="11" Y2="11" Stroke="{StaticResource HighPriority}" StrokeStartLineCap="Round" StrokeEndLineCap="Round" StrokeThickness="2"/>
+                            </Grid>
                         </Grid>
                     </Grid>
 
