--- a/Resources/Dictionaries/Icons.xaml
+++ b/Resources/Dictionaries/Icons.xaml
@@ -189,4 +189,17 @@
         </DrawingImage.Drawing>
     </DrawingImage>
 
+    <!--https://www.svgrepo.com/svg/375114/save-->
+
+    <DrawingImage x:Key="saveIcon">
+        <DrawingImage.Drawing>
+            <DrawingGroup ClipGeometry="M0,0 V52 H52 V0 H0 Z">
+                <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M52,52z M0,0z M37.1,4L37.1,17.6C37.1,18.6,36.3,19.5,35.2,19.5L13.9,19.5C12.9,19.5,12,18.7,12,17.6L12,4 8,4C5.8,4,4,5.8,4,8L4,44C4,46.2,5.8,48,8,48L44,48C46.2,48,48,46.2,48,44L48,11.2 40.8,4 37.1,4z M44.1,42.1C44.1,43.1,43.3,44,42.2,44L9.9,44C8.9,44,8,43.2,8,42.1L8,25.4C8,24.4,8.8,23.5,9.9,23.5L42.2,23.5C43.2,23.5,44.1,24.3,44.1,25.4L44.1,42.1z" />
+                <DrawingGroup Opacity="1">
+                    <GeometryDrawing Brush="{StaticResource Icons}" Geometry="F1 M52,52z M0,0z M24.8,13.6C24.8,14.6,25.6,15.5,26.7,15.5L31.3,15.5C32.3,15.5,33.2,14.7,33.2,13.6L33.2,4 24.9,4 24.8,13.6 24.8,13.6z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingImage.Drawing>
+    </DrawingImage>
+
 </ResourceDictionary>
