Removed save progress icon

--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -47,9 +47,8 @@
                     </Grid>
                 </StackPanel>
 
-                <StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
-                    <Image x:Name="SaveIcon" Source="{StaticResource saveIcon}" Width="17" Height="17" Opacity="0" Visibility="Collapsed"/>
-                </StackPanel>
+                <!--<StackPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
+                </StackPanel>-->
 
             </DockPanel>
 
