--- a/Pages/AddTaskPage.xaml
+++ b/Pages/AddTaskPage.xaml
@@ -27,7 +27,10 @@
 
                     <StackPanel>
 
-                        <Label Content="Task Name" Padding="0" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12"/>
+                        <Grid>
+                            <Label Content="Task Name" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
+                            <Line x:Name="L1" Stroke="{StaticResource Text}" X2="7" Margin="28.5 14 0 0" Visibility="Collapsed"/>
+                        </Grid>
 
                         <Grid Height="40" Margin="0 5 0 0">
                             <TextBox x:Name="TaskNameTextbox" Style="{StaticResource RoundedTextBox}" TextChanged="TaskNameTextbox_TextChanged" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
@@ -48,7 +51,10 @@
 
                             <Popup x:Name="datePickerPopUp" PlacementTarget="{Binding ElementName=calendarButtonBorder}" StaysOpen="False" VerticalOffset="10"/>
 
-                            <Label Content="Date" Padding="0" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Margin="0 0 0 5"/>
+                            <Grid>
+                                <Label Content="Date" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Margin="0 0 0 5" Padding="0"/>
+                                <Line x:Name="L2" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0" Visibility="Collapsed"/>
+                            </Grid>
 
                             <Grid Height="40">
 
@@ -68,8 +74,11 @@
                         </StackPanel>
 
                         <StackPanel Grid.Column="2">
-                            
-                            <Label Content="Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" Margin="0 0 0 5"/>
+
+                            <Grid>
+                                <Label Content="Time" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" Margin="0 0 0 5"/>
+                                <Line x:Name="L3" Stroke="{StaticResource Text}" X2="7" Margin="0 14 0 0" Visibility="Collapsed"/>
+                            </Grid>
 
                             <Grid>
                                 <TextBox x:Name="timeTextBox" Style="{StaticResource RoundedTextBox}" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
@@ -90,7 +99,10 @@
 
                         <StackPanel>
 
-                            <Label Content="Tags" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
+                            <Grid>
+                                <Label Content="Tags" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
+                                <Line x:Name="L4" Stroke="{StaticResource Text}" X2="7" Margin="13 14 0 0" Visibility="Collapsed"/>
+                            </Grid>
 
                             <Grid Margin="0 5 0 0" Height="40">
 
@@ -110,79 +122,68 @@
 
                         </StackPanel>
 
-                        <!--<StackPanel Grid.Column="2">
-
-                            <Label Content="Recurrance" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0"/>
-
-                            <Grid Margin="0 5 0 0">
-                                <TextBox x:Name="RecurranceTextBox" Style="{StaticResource RoundedTextBox}" GotKeyboardFocus="Textbox_GotKeyboardFocus"/>
-                                <Border x:Name="RecurranceBorder" BorderBrush="{StaticResource PastDue}" BorderThickness="0" Height="40" CornerRadius="10"/>
-                            </Grid>
-
-                        </StackPanel>-->
-
                     </Grid>
 
-                    <!--<DockPanel Margin="0 5 0 5" Height="30">
+                    <DockPanel Margin="0 20 0 0">
 
-                        <Label Content="Repeat every" Width="100" HorizontalContentAlignment="Right" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" DockPanel.Dock="Left" VerticalContentAlignment="Center" Padding="0,0,10,0"/>
+                        <Border Background="Transparent" MouseDown="HighPriority_MouseDown" Cursor="Hand">
 
-                        <Border DockPanel.Dock="Right" Width="100" Background="{StaticResource TitleBar}">
-                            <ComboBox VerticalContentAlignment="Center" SelectedIndex="0">
-                                <ComboBoxItem Content="minutes"/>
-                                <ComboBoxItem Content="hours"/>
-                                <ComboBoxItem Content="days"/>
-                                <ComboBoxItem Content="weeks"/>
-                                <ComboBoxItem Content="months"/>
-                                <ComboBoxItem Content="years"/>
-                            </ComboBox>
-                        </Border>
-                        
-                        <Border x:Name="RepeatTimeBorder" Background="#333333" BorderBrush="{StaticResource PastDue}" BorderThickness="0">
-                            <TextBox x:Name="RepeatTimeTextBox" Background="Transparent"/>
-                        </Border>
+                            <StackPanel Orientation="Horizontal">
 
-                    </DockPanel>-->
+                                <Grid>
+                                    <Label Content="High Priority" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="12" Padding="0" VerticalAlignment="Center"/>
+                                    <Line x:Name="L5" Stroke="{StaticResource Text}" X2="6" Margin="28 26 0 0" Visibility="Collapsed"/>
+                                </Grid>
 
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 20 0 0">
+                                <Border BorderBrush="{StaticResource CheckBox}" BorderThickness="2" CornerRadius="2" HorizontalAlignment="Center" Width="14" Height="14" Margin="10 0 0 0">
+                                    <Path Data="M1,4 L4,6 L7,1" x:Name="checkMark" Stroke="{StaticResource Blue}" Width="8" Height="8" Margin="0 1 0 0" StrokeThickness="2" IsHitTestVisible="False" Opacity="0" />
+                                </Border>
 
-                        <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Height="40" Cursor="Hand">
-
-                            <Border.Background>
-                                <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
-                            </Border.Background>
-
-                            <Border.ToolTip>
-                                <ToolTip>
-                                    <ToolTip.Content>
-                                        <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
-                                    </ToolTip.Content>
-                                </ToolTip>
-                            </Border.ToolTip>
-
-                            <Label Content="Cancel" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                            </StackPanel>
 
                         </Border>
 
-                        <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 0 0 0" Height="40" Cursor="Hand">
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" DockPanel.Dock="Right">
 
-                            <Border.Background>
-                                <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
-                            </Border.Background>
+                            <Border x:Name="CancelButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="CancelButton_MouseDown" MouseMove="Border_MouseMove" Height="40" Cursor="Hand">
 
-                            <Border.ToolTip>
-                                <ToolTip>
-                                    <ToolTip.Content>
-                                        <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
-                                    </ToolTip.Content>
-                                </ToolTip>
-                            </Border.ToolTip>
+                                <Border.Background>
+                                    <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource Secondary}}"/>
+                                </Border.Background>
 
-                            <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+                                <Border.ToolTip>
+                                    <ToolTip>
+                                        <ToolTip.Content>
+                                            <userControl:ButtonToolTip ToolTipText="Cancel" Button1Text="esc"/>
+                                        </ToolTip.Content>
+                                    </ToolTip>
+                                </Border.ToolTip>
 
-                        </Border>
+                                <Label Content="Cancel" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
 
-                    </StackPanel>
+                            </Border>
+
+                            <Border x:Name="AddButton" HorizontalAlignment="Right" CornerRadius="5" IsMouseDirectlyOverChanged="Border_IsMouseDirectlyOverChanged" MouseDown="AddButton_MouseDown" MouseMove="Border_MouseMove" Margin="10 0 0 0" Height="40" Cursor="Hand">
+
+                                <Border.Background>
+                                    <SolidColorBrush Opacity="0.5" Color="{Binding Color, Source={StaticResource DarkBlue}}"/>
+                                </Border.Background>
+
+                                <Border.ToolTip>
+                                    <ToolTip>
+                                        <ToolTip.Content>
+                                            <userControl:ButtonToolTip ToolTipText="Add Task" Button1Text="enter"/>
+                                        </ToolTip.Content>
+                                    </ToolTip>
+                                </Border.ToolTip>
+
+                                <Label Content="Add Task" FontFamily="/TemporaTasks;component/Resources/Fonts/Manrope.ttf#Manrope Regular" Foreground="{StaticResource Text}" FontSize="14" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Padding="0,0,0,0" Margin="20 0 20 0" Grid.Column="1" IsHitTestVisible="False" VerticalAlignment="Center"/>
+
+                            </Border>
+
+                        </StackPanel>
+
+                    </DockPanel>
 
                 </StackPanel>
 
