--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -38,11 +38,23 @@
 
                 <StackPanel DockPanel.Dock="Top">
                     <Grid>
-                        <Border x:Name="HomeButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand"/>
+                        <Border x:Name="HomeButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand">
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <userControl:ButtonToolTip ToolTipText="Switch to Home View" Button1Text="h"/>
+                                </ToolTip>
+                            </Border.ToolTip>
+                        </Border>
                         <Image x:Name="HomeIcon" Source="{StaticResource homeIcon}" MaxWidth="20" MaxHeight="20" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
                     </Grid>
                     <Grid Margin="0 5 0 0">
-                        <Border x:Name="CompletedButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand"/>
+                        <Border x:Name="CompletedButton" Background="{StaticResource DarkBlue}" CornerRadius="5" Opacity="0" Width="40" Height="40" MouseDown="CategoryButton_MouseDown" IsMouseDirectlyOverChanged="CategoryButton_IsMouseDirectlyOverChanged" Cursor="Hand">
+                            <Border.ToolTip>
+                                <ToolTip>
+                                    <userControl:ButtonToolTip ToolTipText="Switch to Completed View" Button1Text="c"/>
+                                </ToolTip>
+                            </Border.ToolTip>
+                        </Border>
                         <Image x:Name="CompletedIcon" Source="{StaticResource completedIcon}" MaxWidth="18" MaxHeight="18" Opacity="0.25" IsHitTestVisible="False" RenderTransformOrigin="0.5, 0.5"/>
                     </Grid>
                 </StackPanel>
